# post-training-envs

./: README.md  plan.md  pyproject.toml
nnopt/: __init__.py  __main__.py  evaluate.py  prompt.py  reward.py  sandbox.py  task.py  utils.py
nnopt/tasks/: __init__.py
nnopt/tasks/autoencoding/: __init__.py  mnist_ae.py
nnopt/tasks/classification/: __init__.py  cifar10.py  cifar100.py  fashion_mnist.py  kmnist.py  mnist.py  svhn.py
nnopt/tasks/regression/: __init__.py  california_housing.py  sinusoidal.py
nnopt/tasks/segmentation/: __init__.py  oxford_pet.py  voc2012.py
nnopt/tasks/sequence/: __init__.py  imdb_sentiment.py
scripts/: download_data.py  validate_tasks.py
tests/: test_reward.py  test_sandbox.py  test_tasks.py
